- Upgrade Spring Boot to v3.0.3 - Removed SpringFox and replaced it with OpenAPI Documentation